# raster

./: Dockerfile  README.md  ]
docs/: raster-class-diagram.asta  raster1.png.bak
docs/doxygen/: Doxyconfig
docs/doxygen/html/: BoundaryFiller_8h_source.html  BresenhamLineDrawer_8h_source.html  Canvas2D_8h_source.html  CanvasDescVisitor_8h_source.html  Canvas_8h_source.html  Circle_8h_source.html  Configs_8h_source.html  DDALineDrawer_8h_source.html  DescVisitor_8h_source.html  Drawer_8h_source.html  Ellipsis_8h_source.html  FloodFiller_8h_source.html  InteriorFinder_8h_source.html  LineSegment_8h_source.html  LodePngPrinter_8h_source.html  MidpointCircleDrawer_8h_source.html  NetpbmPrinter_8h_source.html  Object_8h_source.html  PointDrawer_8h_source.html  PointSamplers_8h_source.html  Point_8h_source.html  PolygonInteriorFinder_8h_source.html  PolygonScanLineFiller_8h_source.html  Polygon_8h_source.html  PolylineDrawer_8h_source.html  Polyline_8h_source.html  Printer_8h_source.html  SceneDescReader_8h_source.html  SceneSettings_8h_source.html  SingleFiller_8h_source.html  XiaolinWuEllipsisDrawer_8h_source.html  XiaolinWuLineDrawer_8h_source.html  YAMLSceneDescReader_8h_source.html  YamlCppObjects_8h_source.html  _boundary_filler_8h_source.html  _bresenham_line_drawer_8h_source.html  _canvas2_d_8h_source.html  _canvas_8h_source.html  _canvas_desc_visitor_8h_source.html  _circle_8h_source.html  (+378 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+11 more)
examples/: basic-scene.yml  sword.ppm  testimage.ppm
examples/3d/: molecules.yml
examples/circle/: circle.yml
examples/diamond/: diamond.yml
examples/ellipsis/: ellipsis.yml
examples/kirby/: kirby.yml
examples/lines/: lines.yml
examples/polygons/: polygons.yml
examples/presentation/: complex.yml  lines.ppm  lines.yml  objects.yml  polygons.ppm  polygons.yml  star.ppm  star.yml
examples/sword/: sword.yml
sources/: CMakeLists.txt
sources/include/: SceneDescReader.h  YAMLSceneDescReader.h  common.h
sources/include/canvas/: Canvas.h  Canvas2D.h  CanvasDescVisitor.h
sources/include/canvas/reader/: DescVisitor.h  SceneDescReader.h  SceneSettings.h  YAMLSceneDescReader.h
sources/include/canvas/reader/yaml/: YamlCppObjects.h
sources/include/configs/: Configs.h
sources/include/drawers/: BresenhamLineDrawer.h  DDALineDrawer.h  Drawer.h  MidpointCircleDrawer.h  PointDrawer.h  PolylineDrawer.h  XiaolinWuCircleDrawer.h  XiaolinWuEllipsisDrawer.h  XiaolinWuLineDrawer.h
sources/include/fillers/: BoundaryFiller.h  FloodFiller.h  PolygonScanLineFiller.h  SingleFiller.h
sources/include/interior_finders/: InteriorFinder.h  PointSamplers.h  PolygonInteriorFinder.h
sources/include/objects/: Circle.h  Ellipsis.h  Line.h  LineSegment.h  Object.h  Point.h  Polygon.h  Polyline.h
sources/include/printer/: LodePngPrinter.h  NetpbmPrinter.h  Printer.h
sources/include/utils/: color_utils.h  geometry_utils.h  imgproc_utils.h
sources/src/: YAMLSceneDescReader.cpp  driver.cpp
sources/src/canvas/: Canvas2D.cpp  CanvasDescVisitor.cpp
sources/src/canvas/reader/: SceneSettings.cpp  YAMLSceneDescReader.cpp
sources/src/configs/: Configs.cpp
sources/src/printer/: LodePngPrinter.cpp  NetpbmPrinter.cpp
sources/src/utils/: color_utils.cpp  geometry_utils.cpp  imgproc_utils.cpp
sources/tests/: geometry_utils_tests.cpp  polygon_interior_finder_tests.cpp  yamlsd_reader_tests.cpp
